--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,20 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
+            <plugin>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+                <version>2.0.8</version>
+                <configuration>
+                    <buildpacks>
+                        <buildpack>heroku/exec</buildpack>
+                        <buildpack>heroku/metrics</buildpack>
+                        <buildpack>heroku/jvm</buildpack>
+                    </buildpacks>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
