--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,8 @@
             <version>1.11.3</version>
         </dependency>
 
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
